Внесены правки в задачу BJS2-62470.