@@ -22,23 +22,24 @@ public class PotionGathering {
     public static void gatherAllIngredients(List<Potion> potions) {
         AtomicInteger totalIngredients = new AtomicInteger(0);
 
-        List<CompletableFuture<Void>> futures = potions.stream()
-                .map(potion -> CompletableFuture.supplyAsync(() -> gatherIngredients(potion))
-                        .thenAccept(totalIngredients::addAndGet))
-                .collect(Collectors.toList());
+        List<CompletableFuture<Integer>> futures = potions.stream()
+                .map(PotionGathering::gatherIngredients)
+                .toList();
 
         CompletableFuture.allOf(futures.toArray(new CompletableFuture[0])).join();
         System.out.println("Общее количество собранных ингредиентов: " + totalIngredients.get());
     }
 
-    public static int gatherIngredients(Potion potion) {
-        try {
-            System.out.println("Сбор ингредиентов для " + potion.getName());
-            Thread.sleep(1000);
-        } catch (InterruptedException e) {
-            log.info(e.getMessage(), e);
-            Thread.currentThread().interrupt();
-        }
-        return potion.getRequiredIngredients();
+    public static CompletableFuture<Integer> gatherIngredients(Potion potion) {
+        return CompletableFuture.supplyAsync(() -> {
+            try {
+                System.out.println("Сбор ингредиентов для " + potion.getName());
+                Thread.sleep(1000);
+            } catch (InterruptedException e) {
+                log.info(e.getMessage(), e);
+                Thread.currentThread().interrupt();
+            }
+            return potion.getRequiredIngredients();
+        });
     }
 }
